# 2025sp-turboslam

./: .gitignore  .gitmodules  README.md
3D_printed_pieces/UltrasonicSensor_Mount/: bumper_and_carattach.stl
backend/bag_files/: info.md
backend/bag_files/lidar_imu_servo_ultrasonic/: lidar_imu_servo_ultrasonic_0.db3  metadata.yaml
backend/bag_files/lidar_scan/: metadata.yaml  rosbag2_2025_05_08-14_24_05_0.db3
backend/bag_files/lidar_scan_microros/: metadata.yaml  rosbag2_2025_05_13-18_27_52_0.db3
backend/bag_files/lidar_servoAngle_2.5hz_5hz/: lidar_servoAngle_5hz_2.5hz_0.db3  metadata.yaml
backend/bag_files/lidar_servoAngle_imu_3hz_8hz_8hz/: lidar_servoAngle_imu_3hz_8hz_8hz_0.db3  metadata.yaml
backend/bag_files/lidar_servo_pcl_10hz_20hz/: metadata.yaml
backend/bag_files/raw_pcl/: metadata.yaml  raw_pcl_0.db3
backend/bag_files/raw_pcl2/: metadata.yaml  raw_pcl2_0.db3
backend/install/: local_setup.sh  setup.sh
backend/install/tilt_lidar_node/share/tilt_lidar_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
backend/install/tilt_lidar_node/share/tilt_lidar_node/cmake/: tilt_lidar_nodeConfig.cmake
backend/install/tilt_lidar_node/share/tilt_lidar_node/launch/: view_tilt_lidar_sim_launch.py
backend/install/tilt_lidar_node/share/tilt_lidar_node/rviz/: view_tilt_lidar.rviz
backend/log/: latest_build
backend/models/: README.md
backend/ros2_ws/: README.md
backend/ros2_ws/src/3d_projection/: CMakeLists.txt  README.md  package.xml
backend/ros2_ws/src/3d_projection/src/: laser_to_pointcloud.cpp
backend/ros2_ws/src/LIO-SAM/: CMakeLists.txt  README.md
backend/ros2_ws/src/LIO-SAM/config/: params.yaml  params_default.yaml
backend/ros2_ws/src/LIO-SAM/src/: imuPreintegration.cpp
backend/ros2_ws/src/joystick_ros2/: README.md  joystick_ros2.py
backend/ros2_ws/src/loam_back_and_forth/: CMakeLists.txt  package.xml
backend/ros2_ws/src/loam_back_and_forth/launch/: loam_back_and_forth_launch.py
backend/ros2_ws/src/loam_back_and_forth/rviz_cfg/: full_scan.rviz  loam_back_and_forth.rviz  loam_back_and_forth_2.rviz
backend/ros2_ws/src/loam_back_and_forth/src/: laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp  transformMaintenance.cpp
backend/ros2_ws/src/teleop_keyboard/: Teleop.py
backend/ros2_ws/src/tilt_lidar_node/: CMakeLists.txt  README.md
backend/ros2_ws/src/tilt_lidar_node/bag/lidarServo/: lidarServo_0.db3  metadata.yaml
backend/ros2_ws/src/tilt_lidar_node/bag/lidar_servo_imu_pcl_slow_10hz_5hz_10hz/: metadata.yaml
backend/ros2_ws/src/tilt_lidar_node/bag/lidar_servo_pcl_slow_10hz_15hz/: metadata.yaml
backend/ros2_ws/src/tilt_lidar_node/bag/subset/: metadata.yaml  subset_0.db3
backend/ros2_ws/src/tilt_lidar_node/launch/: view_tilt_lidar_launch.py  view_tilt_lidar_sim_launch.py
backend/ros2_ws/src/tilt_lidar_node/rviz/: view_tilt_lidar.rviz
backend/ros2_ws/src/tilt_lidar_node/src/: tilt_lidar_node.cpp
design/3d_files/encoder_support/: encoder_support.step
design/3d_files/esp32s3_mount/: esp32s3case.stl  esp32s3case_union.stl
design/3d_files/layer_platform/: layer_platform_v1.step  layer_platform_v1.stl  layer_platform_v4.step  layer_platform_v4.stl  layer_platform_v5.f3d  layer_platform_v5.step  layer_platform_v5.stl  layer_platform_v6.f3d  layer_platform_v6.step  layer_platform_v6.stl
design/3d_files/tilting_lidar_mount/cad/: lidar mount.step  lidar_mount.step
design/3d_files/tilting_lidar_mount/cad/dxf/: bearingSup.dxf  servoSup.dxf
design/3d_files/tilting_lidar_mount/cad/prototype/: lidar_mount_prototype.f3d
design/3d_files/tilting_lidar_mount/cad/prototype/dxf/: basePlate.dxf
design/3d_files/tilting_lidar_mount/cad/prototype/stl/: lidarSup.stl
design/3d_files/tilting_lidar_mount/cad/real/: lidar_mount.f3d  lidar_mount.step
design/3d_files/tilting_lidar_mount/cad/real/stl/: bearingSup.stl  lidarSup.stl  servoSup.stl
design/3d_files/tilting_lidar_mount/cad/stl/: l-bracket_by_whatmakeart.stl
design/3d_files/ultrasonic_sensor_mount/: bumperLower.stl  caselower2.stl  ultrasonicsensor_case.stl
docker/: Dockerfile  docker-compose.yml
esp32/: .gitignore  README.md
esp32/cam/src/: Cam.ino  app_httpd.cpp
esp32/microros_example/: README.md  platformio.ini
esp32/microros_example/src/: main.cpp
esp32/microros_rplidar_c1/: .gitignore  README.md  platformio.ini
esp32/microros_rplidar_c1/include/: AS5600Encoder.h  DMS15.h  GPS_NEO6M.h  I2C_mutex.h  I2C_wire.h  ImuSensor.h  MotorController.h  NEO6M.h  RplidarC1.h  UltraSonicSensor.h  rplidar.h  sl_lidar_driver.h  sl_lidar_esp32.h
esp32/microros_rplidar_c1/src/: AS5600.cpp  GPS_NEO6M.cpp  HR-SR04.cpp  I2C_wire.cpp  MotorController.cpp  RplidarC1.cpp  Teleop.py  calibration.cpp  gps.cpp  imu.cpp  main.cpp  old_main.cpp  rplidar_driver.cpp  sdk_main.cpp  servo.cpp  sl_async_transceiver.cpp  sl_crc.cpp  sl_lidar_driver.cpp  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp  teleop_motor.py
esp32/microros_rplidar_c1/src/arch/ESP32/: arch_esp32.h  net_seial.h  net_serial.cpp  thread.hpp  timer.cpp  timer.h
esp32/microros_rplidar_c1/src/dataunpacker/: dataunpacker.cpp
esp32/microros_rplidar_c1/src/esp32_motor_firmware/firmware/src/: main.cpp
esp32/microros_rplidar_c1/src/hal/: event.h  locker.h  thread.cpp  thread.h  types.h
esp32/microros_rplidar_c1/src/pc_motor_controller/: keyboard_controller.py
esp32/microros_ws/: .gitignore  README.md
esp32/test_motor_with_esp32servo_lib/: platformio.ini
esp32/test_motor_with_esp32servo_lib/src/: main.cpp
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/public/css/: minecraft.css
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx  input.tsx  inputbar.tsx  joystick.tsx  panel.tsx  tabs.tsx
frontend/src/components/world/: PointCloud.tsx
frontend/src/lib/rosreact/: README.md  package.json  tsconfig.json
frontend/src/lib/rosreact/src/: index.ts
log/: latest_list
slam-ui/: index.html  main.js  style.css
(+31 files in other folders)
